--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,9 +193,24 @@ section{
 
 /* Meet the trainers*/
 
+.section-title{
+    font-size: 55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;
+}
+
+.primary-border{
+    border-color: #fce138;
+}
+
+.secondary-border{
+    border-color: #39a6b2;
+}
 .trainers{
     text-align: center;
-    
     
 }
 
@@ -247,14 +262,7 @@ section{
 
 /* REACH OUT STYLES START */
 
-.section-title{
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    color: #024e76;
-}
+
 
 .contact{
     text-align: center;
@@ -264,7 +272,7 @@ section{
 
 .contact  h2{
     color: #fce138;
-    text-align: center;
+    
 }
 
 .contact-info iframe{
@@ -272,7 +280,7 @@ section{
     height: 400px;
 }
 
-.contact-info {
+.contact-info div{
     width: 410px;
     display: inline-block;
     vertical-align: top;
@@ -288,7 +296,8 @@ section{
     font-size: 32px;
 }
 
-.contact-info p, .contact-info address{
+.contact-info p, 
+.contact-info address{
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
