--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ body{
 header{
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1{
@@ -28,9 +31,10 @@ header a{
     text-decoration: none;
     color: #fce138;
 }
+/* removed float because adding flexbox*/
 
 header nav {
-    float: right;
+   
     margin: 7px 0;
 }
 
