--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -98,6 +98,7 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
     
 }
 
@@ -121,7 +122,7 @@ section{
     color:#fff;
     margin: 3.5%;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 
      
 }
@@ -167,7 +168,7 @@ section{
 /* section title start*/
 
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     border-bottom: 3px solid;
     color: #024e76;
     padding-bottom: 20px;
@@ -394,4 +395,33 @@ section{
 }
 .flex-row{
     display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+
+@media screen and (max-width:980px) {
+    header h1 a{
+        /* this will be applied on any screen smaller than 980px*/
+       
+    }
+    
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+
+@media screen and (max-width:768px) {
+    header h1{
+        /* this will be applied on any screen between 768px and 575px*/
+        
+    }
+    
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
+@media screen and (max-width:575px){
+    header h1{
+        /*  this will be applied on any screen smaller than 575px*/
+        
+    }
+    
 }
